--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "date-fns": "^2.29.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
-    "moment": "^2.29.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
