--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-query": "^5.49.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "class-variance-authority": "^0.7.0",
+    "cva": "^0.0.0",
     "date-fns": "^2.29.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -21,6 +27,16 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.49.2",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "postcss": "^8.4.39",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4"
   }
 }
